[package]
name = "wsproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
fastwebsockets = { version = "0.6.0", features = ["upgrade", "unstable-split"] }
hyper-util = { version = "0.1.0", features = ["full"]}
http-body-util = { version = "0.1.0"}
hyper = { version = "1", features = ["http1", "server", "client","full"]}
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
prometheus = "0.13.3"
serde_json = "1.0.108"
warp = "0.3.6"
anyhow = "1.0.75"
